--- a/index.html
+++ b/index.html
@@ -132,16 +132,16 @@
             </div>
         </section>
         <section>
-            <div class="footer">
+            <footer class="bottom-end">
                 <div class="footer-image"><img src="images/Logo.png" alt=""></div>
                 <div class="footer-icon">
-                    <i class="fab fa-instagram-square"></i>
-                    <i class="fab fa-facebook-square"></i>
-                    <i class="fab fa-linkedin"></i>
-                    <i class="fab fa-youtube"></i>
+                    <i class="fab fa-instagram-square icon"></i>
+                    <i class="fab fa-facebook-square icon"></i>
+                    <i class="fab fa-linkedin icon"></i>
+                    <i class="fab fa-youtube icon"></i>
                 </div>
-                <div class="footer-text"> Copyright &#169 2022 Football </div>
-            </div>
+            </footer>
+            <div class="footer-text"> Copyright &#169 2022 Football </div>
         </section>
 
         </div>
